
=== Features
* From Gradle 2.13+ GradleTestKit is used to run compatibility tests
* For Gradle 2.12 and earlier, legacy mode (from v0.5.5) is used for running tests.

* https://github.com/ysb33r/gradleTest/issues/1[#1] - Graceful failure when tests have not passed
* https://github.com/ysb33r/gradleTest/issues/2[#2] - HTML test report
* https://github.com/ysb33r/gradleTest/issues/3[#3] - Running counter of tests being executed
* https://github.com/ysb33r/gradleTest/issues/4[#4] - Capture test output and add to test report
* https://github.com/ysb33r/gradleTest/issues/5[#5] - Allow tests to be executed in parallel

=== Bugs

* https://github.com/ysb33r/gradleTest/issues/26[#26] - Unable to build gradleTest project with Gradle 2.1+

=== Other

* https://github.com/ysb33r/gradleTest/issues/12[#12] - Fix Javadoc errors

== v0.5.5
* https://github.com/ysb33r/gradleTest/issues/30[#30] - Specify init scripts
* https://github.com/ysb33r/gradleTest/issues/28[#28], https://github.com/ysb33r/gradleTest/pull/29[#29] - Better error message when ZIP archive is broken
(https://github.com/szpak[Marcin Zajączkowski])
* https://github.com/ysb33r/gradleTest/pull/22[#22], https://github.com/ysb33r/gradleTest/pull/23[#23] - Documentation corrections (https://github.com/matthiasbalke[Matthias Balke])

== v0.5.4
* Updates for Gradle 2.5 

== v0.5.3
* https://github.com/ysb33r/gradleTest/issues/13[#13] - Failure running against JDk6 or JDK7.

== v0.5.2
* https://github.com/ysb33r/gradleTest/issues/11[#11] - Failure when GVM home directory does not exist.
* https://github.com/ysb33r/gradleTest/issues/9[#9] - Unpacking dropped `-bin` off the folder name
* https://github.com/ysb33r/gradleTest/issues/10[#10] - Distributions were incorrectly unpacked to a `gradleDist/gradleDist` folder.

== v0.5.1
* https://github.com/ysb33r/gradleTest/issues/8[#8] - Fixed intermittent download issue

== v0.5
* Initial release
* Can test against various Gradle 2.x versions
* Very basic reporting