@@ -15,6 +15,7 @@
 === Bugs
 
 * https://github.com/ysb33r/gradleTest/issues/26[#26] - Unable to build gradleTest project with Gradle 2.1+
+* https://github.com/ysb33r/gradleTest/issues/34[#34] - Distribution URI fails with File paths under Windows.
 
 === Other
 
